syntax = "proto3";

package book_service;

option go_package = "/book_service";

service BookService {
  rpc CreateBook(CreateBookRequest) returns (CreateBookResponse);
  rpc GetBook(GetBookRequest) returns (GetBookResponse);
  rpc ListBooks(ListBooksRequest) returns (ListBooksResponse);
  rpc UpdateBook(UpdateBookRequest) returns (UpdateBookResponse);
  rpc DeleteBook(DeleteBookRequest) returns (DeleteBookResponse);
}

message Book {
  string id = 1;
  string title = 2;
  string author_id = 3;
  string category_id = 4;
  int32 stock = 5;
  int64 createdAt = 6; // unix time
  int64 updatedAt = 7; // unit time
}

message CreateBookRequest {
  string title = 1;
  string author_id = 2;
  string category_id = 3;
  int32 stock = 4;
}

message CreateBookResponse {
  Book book = 1;
}

message GetBookRequest {
  string id = 1;
}

message GetBookResponse {
  Book book = 1;
}

message ListBooksRequest {}

message ListBooksResponse {
  repeated Book books = 1;
}

message UpdateBookRequest {
  string id = 1;
  string title = 2;
  string author_id = 3;
  string category_id = 4;
  int32 stock = 5;
}

message UpdateBookResponse {
  Book book = 1;
}

message DeleteBookRequest {
  string id = 1;
}

message DeleteBookResponse {
  string message = 1;
}
